fix: fixes gif tool wrapping in review modal

--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,7 @@
   background-repeat: no-repeat;
   width: 144.45px;
 }
+
+.ghg-in-review-changes-modal {
+  width: 678px !important;
+}
